--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -8,4 +8,5 @@
     <input type="text" ng-model="newUser.password" placeholder="password">
     <button type="submit" name="button">Submit</button>
   </form>
+  <p>Already have an Account? <a href="#/signin">Sign In</a></p>
 </section>
