--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,4 @@
-<section ng-controller="MainController as mainCtrl" ng-init="userCtrl.getUser()">
+<section ng-init="userCtrl.getUser()">
   <md-content>
     <nav>
       <div id="logo"></div>
@@ -15,22 +15,48 @@
       </ul>
       <div id="date"></div>
     </nav>
+
     <div id="main-page-content">
-      <section id="main-jobs">
+      <job-form></job-form>
+      <!-- <section id="main-jobs">
         Jobs
         <div class="job-list" ng-repeat="job in userCtrl.user.jobs">
           {{job}}
         </div>
         <button ng-click="showJobForm =! showJobForm">Add New Job</button>
         <form class="NewJobForm">
-          <md-datepicker ng-model="mainCtrl.jobDate" md-placeholder="Enter date"></md-datepicker>
+          <md-datepicker ng-model="jobCtrl.job.Date" md-placeholder="Enter date"></md-datepicker>
+          <md-input-container>
+            <label>Company</label>
+            <input ng-model="jobCtrl.job.company" name="company" value="">
+          </md-input-container>
+          <md-input-container>
+            <label>Position</label>
+            <input ng-model="jobCtrl.job.position" name="position" value="">
+          </md-input-container>
+          <md-chips ng-model="jobCtrl.job.requiredSkills" placeholder="Enter Skills"></md-chips>
+          <md-input-container>
+            <label>Desired Skills</label>
+            <input ng-model="jobCtrl.job.desiredSkills" name="desiredSkills" value="">
+          </md-input-container>
+          <md-input-container>
+            <label>Found On</label>
+            <input ng-model="jobCtrl.job.foundThrough" name="foundThrough" value="">
+          </md-input-container>
+          <md-input-container>
+            <label>Applied At</label>
+            <input ng-model="jobCtrl.job.appliedAt" name="appliedAt" value="">
+          </md-input-container>
         </form>
-      </section>
+      </section> -->
+
       <section id="main-events">
         <div class="event-list">
           EVENTS
         </div>
       </section>
+
     </div>
+
   </md-content>
 </section>
