--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,32 +6,63 @@
       <md-sidenav md-is-locked-open="true">
         <h3>Jobs</h3>
           <div  id="job-list-container">
-            <div  id="job-list-item" ng-click="mainCtrl.selectJob(job)" ng-repeat="job in mainCtrl.jobs | orderBy:'-'">
+            <div  id="job-list-item" ng-click="mainCtrl.selectJob(job)" ng-repeat="job in mainCtrl.activeJobs | orderBy:'-'">
               {{job.position}} at {{job.company}} Applied:{{job.date.substr(0,9)}}
             </div>
           </div>
           <job-form></job-form>
       </md-sidenav>
+
+      <!-- Selected posting -->
       <md-content flex ng-show="!edit">
         <h3>Selected Job</h3>
         <h4>{{mainCtrl.selected.company}}</h4>
+        <p><a href="" ng-click="mainCtrl.responseShow = !mainCtrl.responseShow" ng-show="!mainCtrl.Selected.response">Manage Application Status</a></p> <!--add response section to job model -->
         <p>Position: {{mainCtrl.selected.position}}</p>
         <p>Applied On: {{mainCtrl.selected.date.substr(0,9)}}</p>
-        <p>Contact</p>
-        <p>Name: {{mainCtrl.selected.contact[0].name}}</p>
-        <p>Email: {{mainCtrl.selected.contact[0].email}}</p>
-        <p>Phone: {{mainCtrl.selected.contact[0].phone}}</p>
-        <button ng-click="edit=!edit">Edit</button>
+        <p>Found On: {{mainCtrl.selected.foundThrough}}</p>
+        <p>Applied At: {{mainCtrl.selected.appliedAt}}</p>
+
+
+        <a href="" ng-click="showContact = !showContact">Show Contact Information</a>
+        <p><a href="" ng-click="edit = !edit">Edit</a></p>
+
+        <div id="contactInfo" ng-show="showContact">
+          <p>Contact</p>
+          <p>Name: {{mainCtrl.selected.contact[0].name}}</p>
+          <p>Email: {{mainCtrl.selected.contact[0].email}}</p>
+          <p>Phone: {{mainCtrl.selected.contact[0].phone}}</p>
+        </div>
+
+        <!--manage application status, add interview/offer details -->
+        <div id="responseInfo" ng-show="mainCtrl.responseShow">
+          <h5>Response Details</h5>
+          <div id="appRes" ng-show="!mainCtrl.selected.interest">
+            <p>Was this employer interested in moving forward with your application?</p> <!--only show if selection not previously made -->
+            <button ng-click="mainCtrl.setInt('Yes')">Yes</button>
+            <button ng-click="mainCtrl.setInt('No')">No</button>
+          </div>
+          <div ng-show="mainCtrl.selected.interest == 'Yes'">
+            <button ng-click="mainCtrl.showEvent('Interview')">Add Interview Details</button> <!--ng click = show form with date/location inputs -->
+            <button ng-click="mainCtrl.showEvent('Offer')">Add Offer Details</button> <!--ng click = show form with deadline/details inputs -->
+          </div>
+        </div>
       </md-content>
+
+      <event-form></event-form>
+
+      <!-- Edit post form -->
       <md-content flex ng-show="edit">
         <h3>Selected Job</h3>
         <h4>{{mainCtrl.selected.company}}</h4>
         <p>Position: <input ng-model="mainCtrl.editJob.position" placeholder="{{mainCtrl.selected.position}}"></input></p>
         <p>Applied On: {{mainCtrl.selected.date.substr(0,9)}}</p>
+        <p>Applied At: <input ng-model="mainCtrl.editJob.appliedAt" placeholder="{{mainCtrl.selected.appliedAt}}"></input></p>
+        <p>Found On: <input ng-model="mainCtrl.editJob.foundThrough" placeholder="{{mainCtrl.selected.foundThrough}}"></input></p>
         <p>Contact</p>
-        <p>Name: <input ng-model="mainCtrl.editCont.name" placeholder="{{mainCtrl.selected.contact[0].name}}"</input></p>
-        <p>Email: <input ng-model="mainCtrl.editCont.email" placeholder="{{mainCtrl.selected.contact[0].email}}"</input></p>
-        <p>Phone: <input ng-model="mainCtrl.editCont.phone" placeholder="{{mainCtrl.selected.contact[0].phone}}"</input></p>
+        <p>Name: <input ng-model="mainCtrl.editCont.name" placeholder="{{mainCtrl.selected.contact[0].name}}"></input></p>
+        <p>Email: <input ng-model="mainCtrl.editCont.email" placeholder="{{mainCtrl.selected.contact[0].email}}"></input></p>
+        <p>Phone: <input ng-model="mainCtrl.editCont.phone" placeholder="{{mainCtrl.selected.contact[0].phone}}"></input></p>
         <button ng-click="edit=!edit; mainCtrl.submitEdit()">Submit</button>
         <button ng-click="edit=!edit; mainCtrl.cancelEdit()">Cancel</button>
       </md-content>
@@ -42,6 +73,9 @@
         <h3>EVENTS</h3>
         <section id="main-events">
           <div class="event-list">
+            <div ng-repeat="event in mainCtrl.events">
+              {{event.name}}
+            </div>
           </div>
         </section>
       </md-sidenav>
