--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -13,7 +13,7 @@ nav a {
   border:solid gray 2px;
 }
 
-#job-list-item {
+#job-list-item, #event-list-item {
   border: solid gray 1px;
   border-radius: 3px;
   padding: 2%;
