--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,13 +1,12 @@
 <nav>
   <div id="logo"></div>
   <div id="date"></div>
-    <a href="">Home</a>
-    <a href="">Jobs</a>
-    <a href="">Contacts</a>
-    <a href="">Resumes</a>
-    <a href="">Calander</a>
-    <a href="">Events</a>
-    <a href="">Data</a>
+    <a href="#/home">Home</a>
+    <a href="#/jobs">Jobs</a>
+    <a href="#/contacts">Contacts</a>
+    <a href="#/resumes">Resumes</a>
+    <a href="#/events">Events</a>
+    <!-- <a href="">Data</a> -->
     <a href="" ng-click="userCtrl.signOut()">Sign Out</a>
   <div id="date"></div>
 </nav>
