--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -4,7 +4,7 @@ nav a {
   padding:2%;
 }
 
-#job-list-container, #main-events {
+#job-list-container, #main-events, #selected-job {
   height: 300px;
   overflow: hidden;
   overflow-y: scroll;
